# SMARTpy

./: pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/reference/: index.rst
examples/: demo.py  full_walkthrough.py  smart_process.py
smart/: IGM.py  calculate_properties.py  differential_rotation.py  indexed_grown_mask.py  map_processing.py  polarity_separation_line.py  processing.py
smart/characterization/: PSL.py  dB_dt.py
smart/segmentation/: differential_rotation.py  indexed_grown_mask.py  map_processing.py
smart/tests/: test_calculate_properties.py  test_map_processing.py
