[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "smart"
description = "SolarMonitor Active Regtion Tracking (SMART)"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
dependencies = [
  "numpy",
  "sunpy[map]",
  "scikit-image",
  "matplotlib"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-gallery",
  "sphinx-automodapi",
  "pydata-sphinx-theme",
]

dev = ["smart[tests,docs]"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["smart._dev*"]

[tool.setuptools_scm]
write_to = "smart/_version.py"

[ tool.gilesbot ]

  [ tool.gilesbot.pull_requests ]
    enabled = true

  [ tool.gilesbot.towncrier_changelog ]
    enabled = true
    verify_pr_number = true
    changelog_skip_label = "No Changelog Entry Needed"
    help_url = "https://github.com/TCDSolar/SMARTpy/blob/main/changelog/README.rst"

    changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/TCDSolar/SMARTpy/blob/main/changelog/README.rst)."

    type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/TCDSolar/SMARTpy/blob/main/changelog/README.rst)"

    number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

[tool.towncrier]
    package = "CHIMERApy"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/TCDSolar/SMARTpy/pull/{issue}>`__"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backwards Incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Deprecations and Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Improved Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Trivial/Internal Changes"
      showcontent = true

[tool.mypy]
python_version = "3.9"
